--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,5 +4,10 @@
 // Variables
 @import 'variables';
 
+@import "node_modules/font-awesome/scss/font-awesome.scss";
+
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+// Sb Admin theme
+@import '~startbootstrap-sb-admin/scss/sb-admin';
