--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,6 +4,9 @@
 // Variables
 @import 'variables';
 
+// Custom css
+@import 'custom';
+
 // Font awesome
 @import "node_modules/font-awesome/scss/font-awesome.scss";
 
