--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,20 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);@import url(https://fonts.googleapis.com/css?family=Lato:400,700,400italic);@charset "UTF-8";
 
-/* Main container */
-
-.main-container {
-  margin-top: 15px;
-  background-color: #303030;
-  border-radius: 0.3rem;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-}
-
-@media only screen and (max-width: 600px) {
-  .main-container {
-    margin-top: 0;
-  }
-}
-
 /*!
  *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
@@ -13922,5 +13907,76 @@ a.text-dark:focus {
 
 .list-group-item-action .list-group-item-heading {
   color: #fff;
+}
+
+/* Main container */
+
+.main-container {
+  margin-top: 15px;
+  background-color: #303030;
+  border-radius: 0.3rem;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+@media only screen and (max-width: 600px) {
+  .main-container {
+    margin-top: 0;
+  }
+}
+
+/* Display order */
+
+.order-list {
+  background-color: #ab6f0f;
+  font-family: "Roboto Mono", monospace;
+  font-size: 16px;
+  margin-top: 20px;
+}
+
+#display-order {
+  margin-top: 20px;
+}
+
+.btn {
+  margin-top: 20px;
+}
+
+h4 {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.boss-icon {
+  max-height: 40px;
+  margin-right: 10px;
+}
+
+.list-group-item {
+  font-size: 16px;
+}
+
+.priority-number {
+  height: 66px;
+  margin-right: 0;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 40px;
+  font-weight: bolder;
+}
+
+@media only screen and (max-width: 600px) {
+  .col-numbers {
+    display: none;
+  }
+}
+
+.col-numbers {
+  margin-right: 0;
+  padding-right: 0;
+}
+
+.col-bosses {
+  margin-left: 0;
+  padding-left: 0;
 }
 
